...
            Navigator.of(context).pop();
            onReset();
          },
          style: ElevatedButton.styleFrom(
            backgroundColor: Colors.red,
          ),
          child: const Text('Reset'),
        ),
      ],
    );
  }

  static void show(BuildContext context, Function() onReset) {
...
